<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="tlss.application.ConsoleActivity" android:visibility="visible" style="@style/AppTheme"
>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="309dp"
            android:layout_height="522dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp" android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp" app:layout_constraintVertical_bias="0.48000002"
    >
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_height="wrap_content" app:srcCompat="@drawable/thermometer48"
                    android:id="@+id/temperatureIcon" android:layout_weight="0" android:layout_width="wrap_content"
            />
            <TextView
                    android:text="18"
                    android:layout_width="16dp"
                    android:layout_height="match_parent" android:id="@+id/tempValueText" android:layout_weight="1"
                    android:scrollbars="none" android:textSize="24sp" android:textAlignment="center"
                    android:textIsSelectable="false" android:textStyle="bold"
                    android:gravity="center|center_horizontal"/>
            <TextView
                    android:layout_width="150sp"
                    android:layout_height="wrap_content" android:id="@+id/modeTextView_id" android:layout_weight="2"
                    android:textSize="24sp" android:gravity="center_horizontal"/>
        </LinearLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@android:color/transparent"
                android:gravity="end">

            <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_weight="0">
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/number_1"
                        android:id="@+id/Load1OnOffButton"
                        android:backgroundTint="#00B027A5"
                        android:onClick="LoadOnOff"
                        android:layout_weight="1"
                        android:tag="@string/load1"
                        android:tint="@android:color/darker_gray" android:padding="2dp"
                        android:paddingStart="2dp"
                        android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingEnd="2dp"
                        android:paddingRight="2dp" android:paddingBottom="2dp"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/number_2"
                        android:id="@+id/Load2OnOffButton" android:backgroundTint="#00B027A5"
                        android:tint="@android:color/darker_gray"
                        android:onClick="LoadOnOff"
                        android:layout_weight="1"
                        android:tag="@string/load2" android:padding="2dp" android:paddingStart="2dp"
                        android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingEnd="2dp"
                        android:paddingRight="2dp" android:paddingBottom="2dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_weight="0">
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/number_3"
                        android:id="@+id/Load3OnOffButton" android:tint="@android:color/darker_gray"
                        android:backgroundTint="#00B027A5" android:layout_weight="1" android:onClick="LoadOnOff"
                        android:tag="@string/load3" android:padding="2dp" android:paddingStart="2dp"
                        android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingEnd="2dp"
                        android:paddingRight="2dp" android:paddingBottom="2dp"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/number_4"
                        android:id="@+id/Load4OnOffButton" android:tint="@android:color/darker_gray"
                        android:backgroundTint="#00B027A5" android:layout_weight="1" android:onClick="LoadOnOff"
                        android:tag="@string/load4" android:padding="2dp" android:paddingStart="2dp"
                        android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingEnd="2dp"
                        android:paddingRight="2dp" android:paddingBottom="2dp"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:layout_weight="0">
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/number5"
                        android:id="@+id/Load5OnOffButton" android:tint="@android:color/darker_gray"
                        android:backgroundTint="#00B027A5" android:layout_weight="1" android:onClick="LoadOnOff"
                        android:tag="@string/load5" android:padding="2dp" android:paddingStart="2dp"
                        android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingEnd="2dp"
                        android:paddingRight="2dp" android:paddingBottom="2dp"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/number6"
                        android:id="@+id/Load6OnOffButton" android:tint="@android:color/darker_gray"
                        android:backgroundTint="#00B027A5" android:layout_weight="1" android:onClick="LoadOnOff"
                        android:tag="@string/load6" android:padding="2dp" android:paddingStart="2dp"
                        android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingEnd="2dp"
                        android:paddingRight="2dp" android:paddingBottom="2dp"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="0">
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/number7"
                        android:id="@+id/Load7OnOffButton" android:tint="@android:color/darker_gray"
                        android:backgroundTint="#00B027A5" android:layout_weight="1" android:onClick="LoadOnOff"
                        android:tag="@string/load7" android:padding="2dp" android:paddingStart="2dp"
                        android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingEnd="2dp"
                        android:paddingRight="2dp" android:paddingBottom="2dp"/>
                <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/number8"
                        android:id="@+id/Load8OnOffButton" android:tint="@android:color/darker_gray"
                        android:backgroundTint="#00B027A5" android:layout_weight="1" android:onClick="LoadOnOff"
                        android:tag="@string/load8" android:padding="2dp" android:paddingStart="2dp"
                        android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingEnd="2dp"
                        android:paddingRight="2dp" android:paddingBottom="2dp"/>
            </TableRow>
        </TableLayout>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp" android:layout_weight="1">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/bluetooth48"
                    android:id="@+id/btConnectBtn" android:layout_weight="0" android:backgroundTint="#00B027A5"
                    android:layout_margin="2dp" android:layout_marginStart="2dp" android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp" android:layout_marginEnd="2dp" android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" android:padding="2dp" android:paddingStart="2dp"
                    android:paddingLeft="2dp" android:paddingTop="2dp" android:paddingRight="2dp"
                    android:paddingEnd="2dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="38dp" android:id="@+id/btConnectStatus" android:layout_weight="1"
                    android:textSize="18sp" android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>