<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="tlss.application.SetupActivity" android:onClick="ClickApplyMode">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="302dp"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:gravity="bottom">
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" android:layout_weight="0"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/selectModeRadioGroup_id"
                android:layout_weight="0"
        >
            <TextView
                    android:text="Режим"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/modeHeaderTextView_id"
                    android:gravity="center_horizontal"/>
            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/setDirectModeRadioButton"
                    android:text="@string/setDirectModeRadioButtonCaption"/>
            <RadioButton
                    android:text="@string/setServerModeRadioButtonCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/setServerModeRadioButton"/>
            <RadioButton
                    android:text="@string/setClientModeRadioButtonCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/setClientModeRadioButton"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" android:layout_weight="0"/>
            <Button
                    android:text="@string/btDeviceSelectRext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btModeSelect_id"
                    android:onClick="ClickApplyMode"
                    android:layout_weight="0" style="@style/Widget.AppCompat.Button.Colored"/>
        </RadioGroup>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" android:layout_weight="0"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1"
                android:id="@+id/selectBTDeviceRadioGroup_id">
            <TextView
                    android:text="BT устройства"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/BTdevicesHeadeTextView_id"
                    android:gravity="center_horizontal"/>
            <Button
                    android:text="Выбать устройство"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/btDeviceSelectButton_id"
                    style="@style/Widget.AppCompat.Button.Colored" android:onClick="ClickApplyDevice"/>
        </RadioGroup>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" android:layout_weight="0"/>
        <TextView
                android:text="Сеть"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:gravity="center_horizontal"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
            <TextView
                    android:text="IP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"
                    android:gravity="center_horizontal"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/serverIpEditText" android:layout_weight="1" android:inputType="textFilter"
                    android:numeric="decimal"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="0">
            <TextView
                    android:text="Порт"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"
                    android:gravity="center_horizontal"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/portEditText" android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:text="Применить"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/applyNetSettingsButton" android:layout_weight="0"
                style="@style/Widget.AppCompat.Button.Colored" android:onClick="ClickApplyNetSettings"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>